# am-tg

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  app.supervisord.conf  config.py  docker-compose.yml  pyproject.toml  sources.example.yaml  start_app.sh  utils.py
.github/workflows/: ci.yml  release.yml
deploy/helm/am-tg/: Chart.yaml  values.yaml
deploy/helm/am-tg/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml  servicemonitor.yaml
dev/: docker-compose.yml
dev/alertmanager/: alertmanager.yml
dev/am-tg/: sources.yaml
dev/grafana/dashboards/: am-tg.json
dev/grafana/provisioning/dashboards/: dashboards.yml
dev/grafana/provisioning/datasources/: datasource.yml
dev/prometheus/: prometheus.yml  rules.yml
dev/tg-stub/: default.conf
src/am_tg/: api.py  auth.py  config.py  formatting.py  main.py  metrics.py  models.py  telegram.py  utils.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_formatting.py  test_metrics.py  test_multisource.py  test_smoke.py  test_sources.py  test_telegram.py
tests/fixtures/: amwebhook.json
