[project]
name = "am-tg"
version = "0.1.0"
description = "Send alerts from Alertmanager to Telegram"
readme = "README.md"
authors = [{ name = "Mikhail Savin", email = "mail@jtprog.ru" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/am_tg"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
